# ml-turbulence-modelling

./: .gitignore  FNN.py  README.md  data_filtering.py  plot_graphs.py  preprocess.py  pyproject.toml  requirements.txt  setup.cfg  train.py
examples/: heat_exchanger.py
turbulence_model/: FNN.py  data_filtering.py  plot_graphs.py  preprocess.py  train.py
