[metadata]
name = ml-turbulence-modelling
url = https://github.com/TOffeeAM/ml-turbulence-modelling
author = TOffeeAM
description = AI driven turbulence models
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    ai
    CFD
    turbulence
project_urls =
    Tracker = https://github.com/TOffeeAM/ml-turbulence-modelling/issues
    Source Code = https://github.com/TOffeeAM/ml-turbulence-modelling

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    scipy
    matplotlib
    pandas
    torch
    fluidfoam

[options.extras_require]
dev =
    black
    isort
[flake8]
max-line-length = 120
extend-ignore = E203, E722